--- a/ppmLibrary/ppmLibrary.vcxproj.filters
+++ b/ppmLibrary/ppmLibrary.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="ppm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ppmFormat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ppm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ppmFormat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
