completed writeppm & made image class

--- a/ErgasiaC++/ErgasiaC++.vcxproj
+++ b/ErgasiaC++/ErgasiaC++.vcxproj
@@ -150,11 +150,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Image.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="array2d.h" />
     <ClInclude Include="array2d.hpp" />
+    <ClInclude Include="Image.h" />
+    <ClInclude Include="imageio.h" />
+    <ClInclude Include="vec3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
