--- a/ErgasiaC++/ErgasiaC++.vcxproj.filters
+++ b/ErgasiaC++/ErgasiaC++.vcxproj.filters
@@ -18,12 +18,24 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Image.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="array2d.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="array2d.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="vec3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="imageio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
